--- a/index.html
+++ b/index.html
@@ -5,11 +5,19 @@
             Github Finder
         </title>
         <link rel="icon" href="./img/logo.png">
-        <script src="./script.js"></script>
+        <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="/css/header.css">
+        <!-- <script type="module", src="./script.js"></script> -->
     </head>
     <body>
 
         <header>
+            <div>
+                <img alt="logo" src="./img/logo.png">
+                <p>
+                    GitHub Finder
+                </p>
+            </div>
         </header>
 
         <main>
