feat: 검색바 디자인 추가
- header 양 옆 공백 살짝 증가

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
         <link rel="icon" href="./img/logo.png">
         <link rel="stylesheet" href="index.css">
         <link rel="stylesheet" href="/css/header.css">
+        <link rel="stylesheet" href="/css/main.css">
+        <link rel="stylesheet" href="/css/search-bar.css">
         <!-- <script type="module", src="./script.js"></script> -->
     </head>
     <body>
@@ -21,6 +23,15 @@
         </header>
 
         <main>
+            <div class="search-bar box">
+                <p class="search-bar-title">
+                    Search GitHub Users
+                </p>
+                <p class="search-bar-description">
+                    Enter a username to fetch a user profile and repos
+                </p>
+                <input id="search" type="text"/>
+            </div>
         </main>
 
         <footer>
