feat: repo 목록 디자인 추가

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <link rel="stylesheet" href="/css/profile.css">
         <link rel="stylesheet" href="/css/search-bar.css">
         <link rel="stylesheet" href="/css/tag.css">
+        <link rel="stylesheet" href="/css/repos.css">
         <!-- <script type="module", src="./script.js"></script> -->
     </head>
     <body>
@@ -25,6 +26,7 @@
         </header>
 
         <main>
+
             <div class="search-bar box">
                 <p class="search-bar-title">
                     Search GitHub Users
@@ -56,6 +58,62 @@
                     </ul>
                 </div>
             </div>
+
+            <p class="repos-title">
+                Lastest Repos
+            </p>
+
+            <ul class="repos">
+                <li class="repo box">
+                    <p class="repo-title">github finder</p>
+                    <ul class="tags">
+                        <li><button class="tag" id="starsBtn">Stars: 1</button></li>
+                        <li><button class="tag" id="watchersBtn">Watchers: 2</button></li>
+                        <li><button class="tag" id="forksBtn">Forks: 3</button></li>
+                    </ul>
+                </li>
+                <li class="repo box">
+                    <p class="repo-title">todo app</p>
+                    <ul class="tags">
+                        <li><button class="tag" id="starsBtn">Stars: 1</button></li>
+                        <li><button class="tag" id="watchersBtn">Watchers: 2</button></li>
+                        <li><button class="tag" id="forksBtn">Forks: 3</button></li>
+                    </ul>
+                </li>
+                <li class="repo box">
+                    <p class="repo-title">github finder</p>
+                    <ul class="tags">
+                        <li><button class="tag" id="starsBtn">Stars: 1</button></li>
+                        <li><button class="tag" id="watchersBtn">Watchers: 2</button></li>
+                        <li><button class="tag" id="forksBtn">Forks: 3</button></li>
+                    </ul>
+                </li>
+                <li class="repo box">
+                    <p class="repo-title">todo app</p>
+                    <ul class="tags">
+                        <li><button class="tag" id="starsBtn">Stars: 1</button></li>
+                        <li><button class="tag" id="watchersBtn">Watchers: 2</button></li>
+                        <li><button class="tag" id="forksBtn">Forks: 3</button></li>
+                    </ul>
+                </li>
+                <li class="repo box">
+                    <p class="repo-title">github finder</p>
+                    <ul class="tags">
+                        <li><button class="tag" id="starsBtn">Stars: 1</button></li>
+                        <li><button class="tag" id="watchersBtn">Watchers: 2</button></li>
+                        <li><button class="tag" id="forksBtn">Forks: 3</button></li>
+                    </ul>
+                </li>
+                <li class="repo box">
+                    <p class="repo-title">todo app</p>
+                    <ul class="tags">
+                        <li><button class="tag" id="starsBtn">Stars: 1</button></li>
+                        <li><button class="tag" id="watchersBtn">Watchers: 2</button></li>
+                        <li><button class="tag" id="forksBtn">Forks: 3</button></li>
+                    </ul>
+                </li>
+            </ul>
+
         </main>
 
         <footer>
