feat: 유저 객체의 프로필 정보를 화면에 표시
- 객체 데이터는 요청 횟수 제한을 피하기 위해 임시로 정적 데이터를 사용
- 프로필 뷰 모듈화

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <link rel="stylesheet" href="/css/tag.css">
         <link rel="stylesheet" href="/css/repos.css">
         <link rel="stylesheet" href="/css/footer.css">
-        <!-- <script type="module", src="./script.js"></script> -->
+        <script type="module", src="./script.js"></script>
     </head>
     <body>
         <div class="wrap">
@@ -34,12 +34,12 @@
                     <p class="search-bar-description">
                         Enter a username to fetch a user profile and repos
                     </p>
-                    <input id="search" type="text"/>
+                    <input id="searchUserInput" type="text"/>
                 </div>
 
                 <div class="profile box">
                     <div class="profile-image-div">
-                        <img class="profile-image" alt="ex" src="/img/logo.png">
+                        <img class="profile-image" id="profileImage" alt="profile-image" src="/img/logo.png">
                         <button class="view-profile-btn" id="viewProfileBtn">View Profile</button>
                     </div>
 
