feat: 검색 결과창 디자인 구현
- absolute로 구현

--- a/index.html
+++ b/index.html
@@ -34,7 +34,15 @@
                     <p class="search-bar-description">
                         Enter a username to fetch a user profile and repos
                     </p>
-                    <input id="searchUserInput" type="text"/>
+                    <div class="search-bar-section">
+                        <input id="searchUserInput" type="text">
+                        <ul class="search-result-list">
+                            <li><img class="profile-thumbnail" id="profileThumbnail" alt="profile-thumbnail" src="/img/logo.png">SJ70</li>
+                            <li><img class="profile-thumbnail" id="profileThumbnail" alt="profile-thumbnail" src="/img/logo.png">SJ70</li>
+                            <li><img class="profile-thumbnail" id="profileThumbnail" alt="profile-thumbnail" src="/img/logo.png">SJ70</li>
+                            <li><img class="profile-thumbnail" id="profileThumbnail" alt="profile-thumbnail" src="/img/logo.png">SJ70</li>
+                        </ul>
+                    </div>
                 </div>
 
                 <div class="profile box">
