feat: 유저 검색 시 결과 플로팅 구현
- userSearchResult class 추가
- api 메소드 추가
- 검색 시 마다 새롭게 갱신
- 검색 창이 비었다면 모두 지움

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     </p>
                     <div class="search-bar-section">
                         <input id="searchUserInput" type="text">
-                        <ul class="search-result-list">
+                        <ul id="searchResults" class="search-result-list">
                             <li><img class="profile-thumbnail" id="profileThumbnail" alt="profile-thumbnail" src="/img/logo.png">SJ70</li>
                             <li><img class="profile-thumbnail" id="profileThumbnail" alt="profile-thumbnail" src="/img/logo.png">SJ70</li>
                             <li><img class="profile-thumbnail" id="profileThumbnail" alt="profile-thumbnail" src="/img/logo.png">SJ70</li>
