feat: 검색 결과 창 높이 제한, 스크롤 표기
- 결과 창 css border 표기를 자식이 아닌 부모가 하며, 자식은 border-bottom만 그림

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     </p>
                     <div class="search-bar-section">
                         <input id="searchUserInput" type="text">
-                        <ul id="searchResults" class="search-result-list">
+                        <ul id="searchResults" class="search-result-list invisible">
                         </ul>
                     </div>
                 </div>
