fix: github pages에서 css와 이미지를 읽지 못 하던 오류 해결
- 절대 경로로 명시

--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
         <title>
             Github Finder
         </title>
+        <meta charset="utf-8">
         <link rel="icon" href="./img/logo.png">
-        <link rel="stylesheet" href="index.css">
-        <link rel="stylesheet" href="/css/header.css">
-        <link rel="stylesheet" href="/css/main.css">
-        <link rel="stylesheet" href="/css/profile.css">
-        <link rel="stylesheet" href="/css/search-bar.css">
-        <link rel="stylesheet" href="/css/tag.css">
-        <link rel="stylesheet" href="/css/repos.css">
-        <link rel="stylesheet" href="/css/footer.css">
+        <link rel="stylesheet" type="text/css" href="./css/index.css">
+        <link rel="stylesheet" type="text/css" href="./css/header.css">
+        <link rel="stylesheet" type="text/css" href="./css/main.css">
+        <link rel="stylesheet" type="text/css" href="./css/profile.css">
+        <link rel="stylesheet" type="text/css" href="./css/search-bar.css">
+        <link rel="stylesheet" type="text/css" href="./css/tag.css">
+        <link rel="stylesheet" type="text/css" href="./css/repos.css">
+        <link rel="stylesheet" type="text/css" href="./css/footer.css">
         <script type="module", src="./script.js"></script>
     </head>
     <body>
@@ -43,7 +44,7 @@
 
                 <div id="profile" class="profile box invisible">
                     <div class="profile-image-div">
-                        <img class="profile-image" id="profileImage" alt="profile-image" src="/img/logo.png">
+                        <img class="profile-image" id="profileImage" alt="profile-image" src="./img/logo.png">
                         <button class="view-profile-btn" id="viewProfileBtn">View Profile</button>
                     </div>
 
